--- a/1-Responsive_Web_Design/5-personalPortfolioWebpage/index.html
+++ b/1-Responsive_Web_Design/5-personalPortfolioWebpage/index.html
@@ -1,30 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Webpage</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+  </head>
+  <body>
     <header>
-        <nav id="navbar">
-            <a href="">Moje Projekty</a>
-            <a href="">Kontakt</a>
-            <a href="">O mně</a>
-        </nav>
+      <nav id="navbar">
+        <a href="#projects">Moje Projekty</a>
+
+        <a href="#info">O mně</a>
+      </nav>
     </header>
+    <!-- Sekce hlavní stránky -->
     <section id="welcome-section">
-        <h1></h1>
+      <h1>Jmenuji se David.</h1>
+      <h2>Cesta samouka: Od nuly k vývojáři!</h2>
+      
     </section>
+    <!-- Sekce projektů -->
     <section id="projects">
-        <div class="project-tile"></div>
-    </section>
-    <section>
-        <div>
-            <a href="" id="profile-link"></a>
-            <a href="" id="profile-link"></a>
+      <h1>Projekty zaměřené na HTML a CSS</h1>
+      <div class="project-tile">
+        <div class="inner-projects">
+          <!-- projekt 1 = surveyForm = Koníčky -->
+          <h2 class="h2Flex">Survey Form</h2>
+          <a
+            href="https://rayerking.github.io/CertificateProjects/1-Responsive_Web_Design/1-surveyForm/index.html"
+            target="_blank"
+            ><img
+              src="../5-personalPortfolioWebpage/pictures/1-1-surveyFormUprava.png"
+              alt="Dotazník o koníčcích"
+              class="project-pictures"
+              id="surveyForm"
+          /></a>
         </div>
+        <div class="inner-projects">
+          <h2 class="h2Flex">Tribute Page</h2>
+          <!-- projekt 2 = tributePage = Bitva u Sudoměře -->
+          <a
+            href="https://rayerking.github.io/CertificateProjects/1-Responsive_Web_Design/2-tributePage/index.html"
+            target="_blank"
+            ><img
+              src="../5-personalPortfolioWebpage/pictures/1-2-tributePageUprava.png"
+              alt="Stránka věnovaná Bitvě u Sudoměře"
+              class="project-pictures"
+              id="tributePage"
+          /></a>
+        </div>
+
+        <div class="inner-projects">
+          <h2 class="h2Flex">Technical Documentation</h2>
+          <!-- projekt 3 = technicalDocumentationPage = Úvod do HTML -->
+          <a
+            href="https://rayerking.github.io/CertificateProjects/1-Responsive_Web_Design/3-technicalDocumentationPage/index.html"
+            target="_blank"
+            ><img
+              src="../5-personalPortfolioWebpage/pictures/1-3-technicalDocumentationPageUprava.png"
+              alt="Technická dokumentace HTML"
+              class="project-pictures"
+              id="technicalDocumentationPage"
+          /></a>
+        </div>
+
+        <div class="inner-projects">
+          <!-- projekt 4 = productLandingPage = BeeNature -->
+          <h2 class="h2Flex">Product Landing Page</h2>
+          <a
+            href="https://rayerking.github.io/CertificateProjects/1-Responsive_Web_Design/4-productLandingPage/index.html"
+            target="_blank"
+            ><img
+              src="../5-personalPortfolioWebpage/pictures/1-4-produktLandingPageUprava.png"
+              alt="Produktová stránka BeeNature"
+              class="project-pictures"
+              id="productLandingPage"
+          /></a>
+        </div>
+      </div>
     </section>
-</body>
+    <!-- TODO Sekce informací k projektům -->
+    <section></section>
+
+    <section id="info">
+      <h1>Něco málo o mně</h1>
+
+      <p>
+        Jmenuji se David a základy webového vývoje jsem získal už na škole. V
+        současnosti si své znalosti rozšiřuji přes
+        <strong>FreeCodeCamp</strong>, kde se učím moderní HTML, CSS a
+        JavaScript skrze praktické projekty. Baví mě objevovat, jak web funguje,
+        jak spolu jednotlivé technologie komunikují a jak je možné s trochou
+        kódu vytvořit něco užitečného i vizuálně zajímavého.
+      </p>
+
+      <p>
+        Nejlépe se učím metodou pokus-omyl. Teorie a dlouhé přednášky nejsou
+        úplně pro mě. Učím se vlastním tempem, zkouším, co funguje, a hledám
+        cesty, jak se posouvat dál. Mám rád poker, fotbal a Plzeň 🍺. Do
+        budoucna bych se rád ponořil i do <strong>Unity</strong> a
+        <strong>Blenderu</strong>, protože mě láká herní vývoj a 3D grafika.
+      </p>
+
+      <p>
+        Jsem přátelský, trpělivý a rád řeším věci po svém - hlavně s nadšením a
+        s úsměvem 😄.
+      </p>
+
+      <div class="socials">
+        <a href="https://github.com/RayerKing" target="_blank">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a
+          href="https://www.freecodecamp.org/fccf61b7ef0-1186-4e0e-921a-7aea7077c549"
+          target="_blank"
+        >
+          <i class="fab fa-free-code-camp fa-2x"></i>
+        </a>
+        <a href="mailto:davidjelcic@seznam.cz">
+          <i class="fas fa-envelope fa-2x"></i>
+        </a>
+      </div>
+    </section>
+  </body>
 </html>
