--- a/2-Javascript_Algotithm_Data_Structures/1-Palidrome/index.html
+++ b/2-Javascript_Algotithm_Data_Structures/1-Palidrome/index.html
@@ -4,25 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Palindrome</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <section class="palidrome">
-      
       <div class="flex">
         <h1>Is it a Palindrome?</h1>
         <div class="vstup">
-          <label for="text-input">Enter in text to check for a palindrome:</label
+          <label for="text-input"
+            >Enter in text to check for a palindrome:</label
           ><input type="text" id="text-input" />
           <button id="check-btn">Check</button>
           <div id="result"></div>
         </div>
         <div class="vysvetleni">
           <p>
-            A <i>Palindrome</i> is a word or sentence that's spelled the same way both
-            forward and backward, ignoring punctuation, case, and spacing.
+            A <i>Palindrome</i> is a word or sentence that's spelled the same
+            way both forward and backward, ignoring punctuation, case, and
+            spacing.
           </p>
         </div>
+      </div>
+    </section>
+    <section class="history">
+      <div class="arrayHistory">
+        <h2>History</h2>
+        <button id="clearHistory">ClearAll</button>
+        <ol id="history-list"></ol>
       </div>
     </section>
     <script src="script.js" defer></script>
